--- a/src/app/dashboard/components/product/product-list/product-list.component.html
+++ b/src/app/dashboard/components/product/product-list/product-list.component.html
@@ -3,12 +3,12 @@
     <span>
       <small>**Click on the Add Product Button to add a Product</small>
     </span>
-    <button type="button" class="btn-success" routerLink="/products/new" >Add Product</button>
+    <button type="button" class="btn-success" routerLink="/products/add">Add Product</button>
   </div>
   <div class="content products-content">
-    <app-table-header [selectLabel]="'Product Status'" (statusValue)="onStatusChange($event)"
-                      [resetStatus]="resetStatus"
-                      (search)="performSearch($event)" (pageSize)="fetchItemsPerPage($event)">
+    <app-table-header [selectLabel]="'Product Status'" (statusValue)="onStatusChange($event)" (search)="search($event)"
+                      [resetStatus]="resetStatus" (pageSize)="fetchItemsPerPage($event)"
+                      [placeholder]="'Product Name, Brand, Category, Owner...'">
     </app-table-header>
     <div class="table-wrapper">
       <table>
@@ -16,12 +16,12 @@
         <tr>
           <th>#</th>
           <th style="width: 15rem">Name</th>
-          <th>Image</th>
-          <th style="width: 10rem">In Stock</th>
-          <th>Brand</th>
+          <th style="text-align: center">Image</th>
+          <th style="width: 8rem; text-align: center">In Stock</th>
+          <th style="text-align: center">Brand</th>
           <th style="width: 10rem; text-align: center">Initial Price</th>
           <th style="width: 10rem; text-align: center">Final Price</th>
-          <th>Discount</th>
+          <th style="text-align: center; width: 5rem">Discount</th>
           <th>Owner</th>
           <th>Created On</th>
           <th>Actions</th>
@@ -31,12 +31,20 @@
         <tr *ngFor="let product of pagedList?.items; let i = index">
           <td>{{i + 1}}</td>
           <td>{{product.name}}</td>
-          <td>Prod Image</td>
-          <td>{{product.inStock}}</td>
-          <td>{{product.brand}}</td>
-          <td>{{product.initialPrice}}</td>
-          <td>{{product.finalPrice}}</td>
-          <td>{{product.discount}}</td>
+          <td style="text-align: center">
+            <div class="table-image" *ngIf="product.displayImage">
+              <img [src]="product.displayImage" [alt]="product.name" class="item-image">
+            </div>
+            <button class="btn-warn add-image" [routerLink]="'/products/'+product.id" [queryParams]="{tab: 1}"
+                    *ngIf="!product.displayImage">
+              Add Image
+            </button>
+          </td>
+          <td style="text-align: center">{{product.inStock}}</td>
+          <td style="text-align: center">{{product.brand}}</td>
+          <td style="text-align: center">{{product.initialPrice | currency}}</td>
+          <td style="text-align: center">{{product.finalPrice | currency}}</td>
+          <td style="text-align: center">{{product.discount}}</td>
           <td>{{product.owner}}</td>
           <td>{{product.createdAt | date: 'MMM d, y HH:mm'}}</td>
           <td class="action-btn" *ngIf="!product.active">
@@ -45,7 +53,9 @@
             </button>
           </td>
           <td class="action-btn" *ngIf="product.active">
-            <button type="button" class="btn-primary">Edit</button>
+            <button type="button" class="btn-primary" [routerLink]="'/products/'+product.id" [queryParams]="{tab: 0}">
+              Edit
+            </button>
             <button type="button" class="btn-error" (click)="deleteProduct(product, 'delete')">Delete</button>
           </td>
         </tr>
@@ -57,10 +67,10 @@
                      [totalPages]="pagedList.metaData.totalPages">
     </app-table-pager>
   </div>
-  <app-dialog [dialogTitle]="dialogTitle" [showActionArea]="true" *ngIf="dialogService.showDialog"
+  <app-dialog [extras]="{actionArea: true, title: dialogTitle, loading: loading}" *ngIf="dialogService.showDialog"
               (clearDialog)="closeDialog($event)" (confirmAction)="confirmAction()">
-<!--    <app-category-form [category]="selectedCategory" (reloadCategories)="reloadCategories()"-->
-<!--                       [action]="action">-->
-<!--    </app-category-form>-->
+    <p style="font-size: 1rem" *ngIf="action === 'delete'">
+      Are you sure you want to delete Product with name <strong>{{selectedProduct.name}}</strong>
+    </p>
   </app-dialog>
 </div>
