--- a/src/app/dashboard/components/brand/brand-list/brand-list.component.html
+++ b/src/app/dashboard/components/brand/brand-list/brand-list.component.html
@@ -7,7 +7,8 @@
   </div>
   <div class="content groups-content">
     <app-table-header [selectLabel]="'Brand Status'" (statusValue)="onStatusChange($event)" [resetStatus]="resetStatus"
-                      (search)="performSearch($event)" (pageSize)="fetchItemsPerPage($event)">
+                      (search)="performSearch($event)" (pageSize)="fetchItemsPerPage($event)"
+                      [placeholder]="'Brand Name...'">
     </app-table-header>
     <div class="table-wrapper">
       <table>
@@ -46,7 +47,7 @@
                      [totalPages]="pagedList.metaData.totalPages">
     </app-table-pager>
   </div>
-  <app-dialog [dialogTitle]="dialogTitle" [showActionArea]="showActionArea" *ngIf="dialogService.showDialog"
+  <app-dialog [extras]="{actionArea: actionArea, title: dialogTitle, loading: loading}" *ngIf="dialogService.showDialog"
               (clearDialog)="closeDialog($event)" (confirmAction)="confirmAction()">
     <app-brand-form [brand]="selectedBrand" (reloadBrands)="reloadBrands()" [action]="action">
     </app-brand-form>
