--- a/src/app/dashboard/components/management/member/member-list/member-list.component.html
+++ b/src/app/dashboard/components/management/member/member-list/member-list.component.html
@@ -7,7 +7,8 @@
   </div>
   <div class="groups-content" [ngClass]="{'content' : showContentCard}">
     <app-table-header [selectLabel]="'Member Status'" (statusValue)="onStatusChange($event)" [resetStatus]="resetStatus"
-                      (search)="performSearch($event)" (pageSize)="fetchItemsPerPage($event)">
+                      (search)="performSearch($event)" (pageSize)="fetchItemsPerPage($event)"
+                      [placeholder]="'FirstName, LastName or Email...'">
     </app-table-header>
     <div class="table-wrapper">
       <table>
